test/functions/fcf/TypeReturnType.chpl
const p = proc() type { return int; };
writeln(p():string);
